2009-12-18  Adam Roben  <aroben@apple.com>

        GTK build fix

        * webkit/webkitprivate.cpp: Added #include.

2009-12-18  Kalle Vahlman  <kalle.vahlman@movial.com> and Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Add enable-page-cache property to WebSettings for disabling the Page Cache

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::):
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        (_WebKitWebSettingsPrivate::webkit_web_settings_set_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_get_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:

2009-12-17  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        More make distcheck fixes. Use a more robust solution to making
        sure we are in the correct directory for running these tests.

        * tests/testmimehandling.c:
        (main):
        * tests/testwebview.c:
        (main):

2009-12-17  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Don't assume downloads are always synchronous
        http://bugs.webkit.org/show_bug.cgi?id=32359

        * tests/testdownload.c:
        (download_requested_cb):
        (set_filename):
        (test_webkit_download_perform):
        (test_webkit_download_synch):
        (test_webkit_download_asynch):
        (main): Test downloads synchronously and asynchronously.
        * webkit/webkitwebview.cpp:
        (webkit_web_view_class_init):
        (webkit_web_view_request_download): Only try to start a requested
        download if the destination URI is set and clarify the documentation.

2009-12-17  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Xan Lopez.

        Deprecate the title-changed signal of WebKitWebFrame.

        * webkit/webkitwebframe.cpp: